cmake_minimum_required (VERSION 2.8)
project (Mysql_Test)
INCLUDE_DIRECTORIES(/usr/include/mysql)
set (CMAKE_BUILD_TYPE "Debug")
set (CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -pg -ggdb -std=c++11")
set (CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -pg -Wall -std=c++11")
aux_source_directory (. DIR_SRCS)
add_executable (Mysql_Test ${DIR_SRCS})
target_link_libraries(Mysql_Test mysqlclient)
