cmake_minimum_required (VERSION 2.8)
project (Server)

MESSAGE(STATE "This is BINARY Dir " ${Server_BINARY_DIR})
MESSAGE(STATE "This is SOURCE Dir " ${Server_SOURCE_DIR})
MESSAGE(STATE "CMAKE_BUILD_TYPE " ${CMAKE_BUILD_TYPE})


AUX_SOURCE_DIRECTORY(./ MAIN_SRCS)
AUX_SOURCE_DIRECTORY (./src DIR_SRCS)
AUX_SOURCE_DIRECTORY (../Public PUL_SRCS)

LIST(APPEND MAIN_SRCS ${DIR_SRCS})
LIST(APPEND MAIN_SRCS ${PUL_SRCS})

IF(${CMAKE_BUILD_TYPE} MATCHES "debug")
  SET (CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -pg -ggdb -std=c++11")
  ADD_EXECUTABLE(ServerD ${MAIN_SRCS})
  TARGET_LINK_LIBRARIES(ServerD pthread)
ELSE()
#  SET (CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
  SET (CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -pg -ggdb -std=c++11")
  ADD_EXECUTABLE(Server ${MAIN_SRCS})
  TARGET_LINK_LIBRARIES(Server pthread)
ENDIF()

MESSAGE("Build Type:" ${CMAKE_CXX_FLAGS_RELEASE})
