cmake_minimum_required (VERSION 2.8)
project (Server)
set (CMAKE_BUILD_TYPE "Debug")
set (CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
set (CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
aux_source_directory (. DIR_SRCS)
add_executable (Server ${DIR_SRCS})
target_link_libraries(Server pthread)
